--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jps.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=9000
 
+#propiedades jwt
+
+security.jwt.secret=ProcesosNegocio2022
+security.jwt.issuer=Main
+
+#duracion del token es una hora en milisegundos
+security.jwt.ttlMillis=3600000
+
